--- a/app/globals.css
+++ b/app/globals.css
@@ -12,8 +12,6 @@
 
 body {
   font-family: Inter;
-  /* background-color: rgb(54, 54, 54);
-  color: white; */
 }
 
 @layer utilities {
@@ -161,7 +159,10 @@ body {
 }
 
 .seperator {
-  @apply w-full h-[1px] bg-gray-20;
+  border-top: 2px solid #E5E5E5;
+  width: 100%;
+  display: block;
+  height: 2px;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
